src/blocks/header/header.css
.aegov-header {
  @apply before:from-primary-400 before:to-primary-600 relative pt-2 before:absolute before:top-0 before:h-2 before:w-full before:bg-gradient-to-b;
}
.custom-divide-common {
  @apply before:absolute before:end-0 before:top-2/4 before:-translate-y-2/4;
}
.custom-divide {
  & > * {
    @apply relative inline-flex;
    &:not(:last-child) {
      @apply custom-divide-common before:bg-aeblack-100 me-3 pe-3 before:h-3.5 before:w-px xl:me-4 xl:pe-4;
    }
  }
}
.custom-divide-sm {
  & > * {
    &:not(:last-child) {
      @apply me-1.5 pe-1.5 before:h-3.5 before:w-px xl:me-2 xl:pe-2;
    }
  }
}
.logos {
  @apply flex flex-shrink-0 items-center;
  & .logo-item {
    @apply relative;
    &:not(:last-child) {
      @apply  me-4 md:me-5 lg:me-6 xl:me-10 ;
    }
  }
}
.logo {
  & img {
    @apply block max-h-12 sm:max-h-14 md:max-h-16 lg:max-h-[4.688rem] xl:max-h-20 2xl:max-h-24 max-w-[8.75rem] sm:max-w-[10.625rem] md:max-w-[11.25rem] lg:max-w-[13rem] xl:max-w-[15rem] 2xl:max-w-[25rem];
  }
}
/* .rating-logo {
  @apply inline-block w-8 md:w-10 lg:w-12 xl:w-auto;
} */
.secondary-logo {
  @apply w-8 h-8 md:w-12 md:h-12 lg:w-14 lg:h-14 xl:w-[4.5rem] xl:h-[4.5rem] object-contain;
}
.header-top-right {
  @apply relative min-w-10 md:min-w-12 lg:min-w-16 xl:min-w-20 min-h-10 md:min-h-12 xl:min-h-20; 
  > a {
    @apply absolute -top-2 right-0 min-w-max min-h-max;
  }
  .emblem-logo {
    @apply w-12 h-12 md:w-14 md:h-14 lg:w-[4.5rem] lg:h-[4.5rem] xl:w-24 xl:h-24 max-w-max;
  }
}
/* .header-top {
  @apply py-2.5 lg:py-3;
} */
.hamburger-icon svg {
  @apply inline-flex h-8 w-8;
}
.header-common-links {
  & li {
    &:not(:last-child) {
      @apply before:bg-primary-300;
    }
  }
  & a {
    @apply text-aeblack-700 hover:text-primary-500 flex items-center gap-3 text-sm font-medium no-underline;
  }
}
.header-navs {
  @apply bg-aeblack-50;
}

.main-navigation {
  & .nav-menu {
    & > .menu-item {
      & > a {
        @apply text-aeblack-800 inline-flex items-center rounded-none border-b border-transparent font-bold md:border-b-2 lg:h-14 lg:px-2 lg:text-sm xl:h-16 xl:border-b-[0.188rem] xl:px-3 xl:text-base 2xl:border-b-4 2xl:text-lg;
      }
    }
  }
  & .menu-item {
    & a {
      @apply no-underline;
    }
    &.active-page {
      & > a {
        @apply border-primary-900 text-primary-900;
      }
    }
    &.menu-item-has-children {
      & > a {
        @apply inline-flex items-center gap-2 transition-colors lg:pe-6 xl:pe-8 2xl:pe-9;
      }
      & .submenu-btn {
        @apply focus:ring-primary-400 relative inline-block focus:outline-none focus:ring-2  focus:ring-offset-2 lg:-ms-3 lg:h-3 lg:w-3 lg:-translate-x-2 lg:rtl:translate-x-2 xl:-translate-x-3 xl:rtl:translate-x-3 2xl:-ms-4 2xl:h-4 2xl:w-4;
      }
    }
  }
}

[dir="rtl"] {
  .aegov-header {
    .main-navigation {
      & .nav-menu {
        & > .menu-item {
          & > a {
           @apply font-medium lg:font-bold lg:text-xs xl:text-sm 2xl:text-base;
          }
          &.menu-item-has-children {
            & > a {
              @apply gap-1 lg:gap-2;
            }
          }
          &:first-child {
            & > a {
              & > span {
                display:none;
              }
            }
          }
        }
      }
    }
  }
}
.has-link-icon {
  & a {
    @apply inline-flex items-center gap-2 no-underline;
    & svg {
      @apply h-4 w-4 flex-shrink-0 xl:h-5 xl:w-5;
    }
  }
}

.header-navs-right {
  & li {
    & a {
      @apply text-primary-600 hover:text-primary-500 text-sm font-bold lg:text-xs xl:text-sm;
    }
  }
}

.submenu {
  @apply bg-whitely-50;
  & .submenu-title {
    @apply capitalize lg:mb-4 xl:mb-5 2xl:mb-6;
  }
  & li {
    & a {
      @apply text-aeblack-900 hover:text-primary-700 hover:underline inline-block px-3 py-2 text-sm transition-colors xl:text-base;
    }
  }
}
.submenu-title {
  @apply text-primary-500 font-bold lg:text-sm xl:text-base;
}
/* .menu-item-has-children{
    &:hover{
       & .submenu{
            @apply block;
        }
    }
} */
.rounded-bordered {
  @apply border-aeblack-100 rounded-lg border;
}

.aegov-backdrop + .aegov-backdrop, .aegov-modal-backdrop + .aegov-modal-backdrop {
  @apply z-50;
}

